2006-07-13  yonekawa  <tcgrim@gmail.com>

    * fix: S2PagerでuseLimitOffsetQueryプロパティをtrueにした時に、Countが取得できない不具合を修正しました。

2006-07-11 nowel(S2Dao.PHP5-1.1.0)

    * add: ResultSetHandler
        - extension/db/impl/S2Dao_AbstractBeanResultSetHandler
        - extension/db/impl/S2Dao_AbstractMapResultSetHandler
    	    - extension/db/impl/S2Dao_MapResultSetHandller
        - extension/db/impl/S2Dao_MapListResultSetHandler
        - extension/db/impl/S2Dao_BeanResultSetHandler
        - extension/db/impl/S2Dao_BeanListResultSetHandler
    * add: S2Dao_BasicStatementFactory::createStatement return PDOStatement of PDO::query()
    * modify: S2Dao_BasicResultSetFactory::create returns S2Dao_ObjectResultSetHandler
    * modify: S2Dao_ResultSetHandler::handler(PDOStatement $resultset)
        - dao/resultset/S2Dao_BeanArrayMetaDataResultSetHandler
        - dao/resultset/S2Dao_BeanMetaDataResultSetHandler
        - dao/resultset/S2Dao_BeanListMetaDataResultSetHandler
        - dao/resultset/S2Dao_BeanJsonMetaDataResultSetHandler
        - dao/resultset/S2Dao_BeanYamlMetaDataResultSetHandler
        - extension/db/impl/S2Dao_ObjectResultSetHandler

2006-07-09 nowel(S2Dao.PHP5-1.1.0)

    * add: S2Dao_ResultSetHandlerFactory, S2Dao_ResultSetHandlerFactoryImpl
    * add: add methods S2Dao_EntityManager
    	    - findYaml
    	    - findJson
    * remove: S2Dao_ValueType

2006-07-08 yonekawa(S2Dao.PHP5-1.1.0)

    * add: Json,YAML形式のResultに対応しました。
	   S2Dao_PagerResultSetWrapperImpl
	   S2Dao_PagerJsonResultSetWrapper
	   S2Dao_PagerYamlResultSetWrapper
	   S2Dao_PagerResultSetWrapperFactory
           S2Dao_PagerUtil
    * delete: S2Dao_PagerResultSetWrapper::create -> S2Dao_PagerResultSetWrapper::filter
    * modify: S2Dao_PagerResultSetWrapper -> S2Dao_PagerResultSetWrapperImpl
    * modify: class S2Dao_PagerResultSetWrapper -> interface S2Dao_PagerResultSetWrapper

2006-07-06 nowel(S2Dao.PHP5-1.1.0)

    * fix: SQLコメントのELSEが正しく動作しない不具合を修正しました。
