@@ -36,7 +36,7 @@ abstract class S2Dao_AbstractAutoHandler extends S2Dao_BasicHandler implements S
     private $beanCache_ = null;
 
     public function __construct(S2Container_DataSource $dataSource,
-                                S2Dao_StatementFactory $statementFactory = null,
+                                S2Dao_StatementFactory $statementFactory,
                                 S2Dao_BeanMetaData $beanMetaData,
                                 $propertyTypes) {
 
