@@ -26,70 +26,70 @@
  */
 class S2Dao_PropertyTypeImpl implements S2Dao_PropertyType {
 
-    private $propertyDesc_ = null;
-    private $propertyName_ = null;
-    private $columnName_ = null;
-    private $valueType_ = null;
-    private $primaryKey_ = false;
-    private $persistent_ = true;
+    private $propertyDesc = null;
+    private $propertyName = null;
+    private $columnName = null;
+    private $valueType = null;
+    private $primaryKey = false;
+    private $persistent = true;
 
     public function __construct($propertyDesc, $valueType = null, $columnName = null) {
         if($propertyDesc instanceof S2Container_PropertyDesc){
-            $this->propertyDesc_ = $propertyDesc;
-            $this->propertyName_ = $propertyDesc->getPropertyName();
-            $this->columnName_ = $propertyDesc->getPropertyName();
+            $this->propertyDesc = $propertyDesc;
+            $this->propertyName = $propertyDesc->getPropertyName();
+            $this->columnName = $propertyDesc->getPropertyName();
             $this->valueType = gettype($propertyDesc->getPropertyType());
         } else if(is_string($propertyDesc)){
-            $this->propertyName_ = $propertyDesc;
-            $this->columnName_ = $propertyDesc;
+            $this->propertyName = $propertyDesc;
+            $this->columnName = $propertyDesc;
         }
 
         if($valueType !== null){
-            $this->valueType_ = $valueType;
+            $this->valueType = $valueType;
         }
         if($columnName !== null){
-            $this->columnName_ = $columnName;
+            $this->columnName = $columnName;
         }
     }
 
     public function getPropertyDesc() {
-        return $this->propertyDesc_;
+        return $this->propertyDesc;
     }
 
     public function getPropertyName() {
-        return $this->propertyName_;
+        return $this->propertyName;
     }
 
     public function getColumnName() {
-        return $this->columnName_;
+        return $this->columnName;
     }
     
     public function setColumnName($columnName) {
-        $this->columnName_ = $columnName;
+        $this->columnName = $columnName;
     }
 
     public function getValueType() {
-        return $this->valueType_;
+        return $this->valueType;
     }
 
     public function setValueType($type) {
-        $this->valueType_ = $type;
+        $this->valueType = $type;
     }
 
     public function isPrimaryKey() {
-        return $this->primaryKey_;
+        return $this->primaryKey;
     }
 
     public function setPrimaryKey($primaryKey) {
-        $this->primaryKey_ = $primaryKey;
+        $this->primaryKey = $primaryKey;
     }
 
     public function isPersistent() {
-        return $this->persistent_;
+        return $this->persistent;
     }
 
     public function setPersistent($persistent) {
-        $this->persistent_ = $persistent;
+        $this->persistent = $persistent;
     }
 }
 ?>
