@@ -1,3 +1,10 @@
+2006-07-14 nowel(S2Dao.PHP5-1.1.0)
+
+    * fix[DAOPHP-5]: S2Dao_BasicHandler
+    	    - PHP5.1.3 以降及び PDO 1.0.3以降の場合にPDO::ATTR_EMULATE_PREPARES, trueをセットするようにしました。
+    	* fix: S2Dao_BasicSelectHandler
+    	    - S2Dao_BasicStatementFactoryが正しくセットされない不具合を修正しました。
+
 2006-07-13  yonekawa  <tcgrim@gmail.com>
 
     * fix: S2PagerでuseLimitOffsetQueryプロパティをtrueにした時に、Countが取得できない不具合を修正しました。
